--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build && npm run build:electron && electron-builder",
     "build:electron": "tsc -p tsconfig.electron.json",
-    "dev:electron": "concurrently -k \"npm run dev\" \"npm run electron\"",
-    "electron": "wait-on tcp:5173 && electron .",
+    "build:electron:watch": "tsc -p tsconfig.electron.json -w",
+    "dev:electron": "concurrently -k \"npm run dev\" \"npm run build:electron:watch\" \"npm run electron\"",
+    "electron": "wait-on tcp:5173 && VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -40,8 +41,7 @@
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-virtualized-auto-sizer": "^1.0.26",
-    "react-window": "^2.2.3",
+    "react-virtuoso": "^4.16.1",
     "react-zoom-pan-pinch": "^3.6.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -58,7 +58,6 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
