--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.2.6",
+    "@vidstack/react": "^0.6.15",
     "better-sqlite3": "^12.5.0",
     "chokidar": "^5.0.0",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +49,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
+    "vidstack": "^0.6.15",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
