--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "gen-studio",
+  "name": "prompin-studio",
   "private": true,
   "version": "0.0.0",
   "description": "Generative AI Studio Workflow Support App",
-  "author": "Gen Studio Team",
+  "author": "Promp' Industries",
   "type": "module",
   "main": "dist-electron/electron/main.js",
   "build": {
-    "appId": "com.genstudio.app",
+    "appId": "com.prompinstudio.app",
     "mac": {
       "category": "public.app-category.productivity",
-      "icon": "icon.png"
+      "icon": "public/white_alpha.png"
     },
     "directories": {
       "output": "dist"
@@ -30,6 +30,8 @@
   "dependencies": {
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.0",
@@ -76,6 +78,7 @@
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
