--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@types/dagre": "^0.7.53",
     "@vidstack/react": "^1.12.13",
+    "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^12.5.0",
     "chokidar": "^5.0.0",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +57,7 @@
     "react-dom": "^19.2.0",
     "react-virtuoso": "^4.16.1",
     "react-zoom-pan-pinch": "^3.6.1",
+    "sqlite-vss": "^0.1.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
