--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
-    "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
@@ -62,6 +61,9 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "zustand": "^5.0.9"
+  },
+  "optionalDependencies": {
+    "ffmpeg-static": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
