--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
   "optionalDependencies": {
     "ffmpeg-static": "^5.3.0"
   },
+  "overrides": {
+    "sharp": "^0.33.5"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.17",
