--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
     "react-dom": "^19.2.0",
     "react-virtuoso": "^4.16.1",
     "react-zoom-pan-pinch": "^3.6.1",
-    "sqlite-vss": "^0.1.2",
+    "sharp": "^0.33.5",
+    "sqlite-vec": "^0.1.7-alpha.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
-    "zustand": "^5.0.9",
-    "sharp": "^0.33.5"
+    "zustand": "^5.0.9"
   },
   "optionalDependencies": {
     "ffmpeg-static": "^5.3.0"
