--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "postinstall": "electron-builder install-app-deps && npm rebuild sharp"
+    "postinstall": "electron-builder install-app-deps",
+    "rebuild:windows": "electron-rebuild -f -w better-sqlite3,sharp",
+    "postinstall:windows": "npm run postinstall && npm run rebuild:windows"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -91,6 +93,7 @@
     "cross-env": "^10.1.0",
     "electron": "^39.2.4",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.4.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
