--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "postinstall": "electron-builder install-app-deps",
-    "rebuild:windows": "electron-rebuild -f -w better-sqlite3,sharp",
+    "rebuild:windows": "@electron/rebuild -f -w better-sqlite3,sharp",
     "postinstall:windows": "npm run postinstall && npm run rebuild:windows"
   },
   "dependencies": {
@@ -93,7 +93,7 @@
     "cross-env": "^10.1.0",
     "electron": "^39.2.4",
     "electron-builder": "^26.0.12",
-    "electron-rebuild": "^3.2.9",
+    "@electron/rebuild": "^3.2.9",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
