--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -42,6 +43,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@types/dagre": "^0.7.53",
     "@vidstack/react": "^1.12.13",
     "@xenova/transformers": "^2.17.2",
@@ -59,6 +61,7 @@
     "react-dom": "^19.2.0",
     "react-virtuoso": "^4.16.1",
     "react-zoom-pan-pinch": "^3.6.1",
+    "recharts": "^3.5.1",
     "sharp": "^0.33.5",
     "sqlite-vec": "^0.1.7-alpha.2",
     "tailwind-merge": "^3.4.0",
@@ -77,6 +80,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.2.9",
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/dom": "^10.4.1",
@@ -93,7 +97,6 @@
     "cross-env": "^10.1.0",
     "electron": "^39.2.4",
     "electron-builder": "^26.0.12",
-    "@electron/rebuild": "^3.2.9",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
